concord_examples/tests/ui/unscoped_reference.stderr
error: ep.* is not allowed here
 --> tests/ui/unscoped_reference.rs:8:19
  |
8 |             "x" = token // ERROR: unscoped
  |                   ^^^^^
